--- a/example/package.json
+++ b/example/package.json
@@ -17,9 +17,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.67.0",
     "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0"
+    "postinstall-postinstall": "^2.1.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.10.0"
   }
 }
