--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hadnet/react-native-skeleton",
-  "version": "0.1.0",
-  "description": "test",
+  "version": "0.1.0.alpha.0",
+  "description": "",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -46,24 +46,32 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@arkweid/lefthook": "^0.7.7",
     "@babel/eslint-parser": "^7.18.2",
-    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@react-native-community/eslint-config": "^3.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.68.0",
+    "commitizen": "^4.2.5",
     "commitlint": "^17.0.2",
+    "cz-conventional-changelog": "3.3.0",
+    "dotenv": "^16.0.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "4.3.6",
     "jest": "^28.1.1",
+    "lint-staged": "^13.0.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-builder-bob": "^0.18.3",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.10.0",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
@@ -71,8 +79,11 @@
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
+    "@react-native-masked-view/masked-view": ">=0.2.7",
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-linear-gradient": ">=2.6.2",
+    "react-native-reanimated": ">=2.10.0"
   },
   "jest": {
     "preset": "react-native",
@@ -103,9 +114,21 @@
       }
     }
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,json}": [
+      "prettier --write"
+    ]
+  },
   "eslintConfig": {
     "root": true,
-    "parser": "@babel/eslint-parser",
+    "parser": "@typescript/eslint-parser",
     "extends": [
       "@react-native-community",
       "prettier"
@@ -147,5 +170,10 @@
         }
       ]
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
