--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "commitizen": "^4.2.5",
     "commitlint": "^17.0.2",
     "cz-conventional-changelog": "3.3.0",
-    "dotenv": "^16.0.2",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
