--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-skeleton",
+  "name": "react-native-neo-skeleton",
   "version": "0.1.0.alpha.0",
   "description": "",
   "main": "lib/commonjs/index",
