chore: set version base

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-neo-skeleton",
-  "version": "0.1.0.alpha.0",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
