chore: release 1.0.0-alpha.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hadnet/react-native-skeleton",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
